--- a/app/assets/stylesheets/todo_list.sass
+++ b/app/assets/stylesheets/todo_list.sass
@@ -23,19 +23,18 @@ form#new_todo
     border-top-right-radius: 0
 
   &.completed
-    .todo-description span
+    .todo-description
       color: #a9a9a9
       text-decoration: line-through
 
   .todo-completed
     display: inline-block
     vertical-align: top
-    margin-top: 7px
+    margin-top: 12px
 
-  .todo-list-description, .todo-description
-    width: 90%
-    margin-left: 10px
-    line-height: 2.45em
+  .todo-description
+    margin-left: 7px
 
-  .todo-list-buttons, .todo-buttons
-    margin-top: 5px
+  .todo-buttons
+    float: right
+    margin-top: 3px
