--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -9,24 +9,34 @@
 
     <form id="new_todo" ng-submit="addTodo(todoDescription)">
       <div class="input-group">
-    <input type="text" id="todoDescription" class="form-control input-lg" autofocus="autofocus" maxlength="255" ng-model="todoDescription">
-    <button class="btn btn-success btn-lg" type="submit">追加</button>
-  </div>
+        <input type="text" id="todoDescription" class="form-control input-lg" autofocus="autofocus" maxlength="255" ng-model="todoDescription">
+        <button class="btn btn-success btn-lg" type="submit">追加</button>
+      </div>
     </form>
 
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="todo in list.todos" ng-class="{completed: todo.completed}">
         <div class="todo-completed">
-          <input type="checkbox" ng-model="todo.completed">
-        </div>
-        <div class="todo-description">
-          <span>{{todo.description}}</span>
+          <input type="checkbox" ng-model="todo.completed" ng-click="toggleTodo(todo)">
+          
+          <span class="todo-description">{{todo.description}}</span>
         </div>
         <div class="todo-buttons pull-right">
-          <button class="btn btn-danger btn-xs pull-right" type="button" ng-click="deleteTodo(todo)">
+          <button class="btn btn-danger btn-xs pull-right todo-buttons" type="button" ng-click="deleteTodo(todo)">
             <span class="glyphicon glyphicon-ban-circle"></span>
           </button>
         </div>
+        
+        
+        
+        
+        
+        
+        
+        
+        
+  
+        
       </li>
     </ul>
   </div>
